Correção de erros no módulo.py e criação de novo exe.
Criação de documento instrutivo para gerar um novo instalador após alguma alteração no código fonte do programa.

--- a/site/aferidorDesktop/home/home.html
+++ b/site/aferidorDesktop/home/home.html
@@ -93,9 +93,8 @@
 
       <ul class="dropdown-menu">
         <li><button class="dropdown-item" data-bs-target="#modalAjuda" data-bs-toggle="modal"><i class="bi bi-book me-2"></i>Como usar?</button></li>
-        <li><a class="dropdown-item" href="../download/Instaladaor_AferidorDesktop.exe"><i class="bi bi-download me-2"></i>Baixe o App</a></li>
-        <!-- <li><button class="dropdown-item" id="conectarApp"><i class="bi bi-wifi me-2"></i>Conectar</button></li> -->
-        <li><a class="dropdown-item" href="https://forms.gle/WBv5YuokVoCiceKL6"><i class="bi bi-lightbulb me-2"></i>Sugestões</a></li>
+        <li><button class="dropdown-item" onclick="$('#btnDonwload').click()"><i class="bi bi-download me-2"></i>Baixe o App</button></li>
+        <li><a class="dropdown-item" href="https://forms.gle/ZuXx7JoXaZpEUDT36"><i class="bi bi-lightbulb me-2"></i>Sugestões</a></li>
         <li><button class="dropdown-item" id="refazerTuorInicio"><i class="bi bi-play-circle me-2"></i>Tuor de Boas-Vindas</button></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="../admin/admin.html"><i class="bi bi-gear me-2"></i>Admin</a></li>
