--- a/site/aferidorDesktop/login/login.html
+++ b/site/aferidorDesktop/login/login.html
@@ -95,7 +95,7 @@
 
       <div class="card-body mx-4">
         <form>
-          <img src="assets/img/logo.png" class="d-block mx-auto" width="80px" height="80px">
+          <img src="../common_assets/img/logo_novo.png" class="img-fluid mx-auto d-block" width="100px" height="auto">
                       
             
           <h4 class="fw-bold ms-1 my-4 text-center">Insira seu login</h4>
