--- a/site/aferidorDesktop/login/login.html
+++ b/site/aferidorDesktop/login/login.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../common_assets/logo.ico" />
 
   <title>Login - Aferidor Desktop</title>
   
