Corrigindo envio e exibição do formulário

--- a/site/aferidorDesktop/home/home.html
+++ b/site/aferidorDesktop/home/home.html
@@ -118,14 +118,14 @@
           </div>
           
           <div class="modal-footer justify-content-center">
-            <button type="button" Class="btnResultado" data-bs-toggle="modal" data-bs-target="#formularioEnvio">Enviar</button>
+            <button type="button" Class="btnResultado" data-bs-toggle="modal" data-bs-target="#modalFormularioEnvio">Enviar</button>
           </div>
         </div>
       </div>
     </div>
   
     <!-- FORMULARIO DE ENVIO PARA O DEPARTAMENTO -->
-    <div class="modal fade" id=  tabindex="-1" role="dialog" aria-labelledby="tituloFormularioEnvio" aria-hidden="true">
+    <div class="modal fade" id=modalFormularioEnvio  tabindex="-1" role="dialog" aria-labelledby="tituloFormularioEnvio" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
           <div class="modal-header">
