--- a/site/aferidorDesktop/admin/admin.html
+++ b/site/aferidorDesktop/admin/admin.html
@@ -60,7 +60,7 @@
 
                     <ul class="dropdown-menu">
                       <li><span class="dropdown-item" onclick="logout()">Logout</span></li>
-                      <li><a id="trocarSenhaUsuario" class="dropdown-item" href="../../login/redefinirSenha.html">Trocar Senha</a></li>
+                      <li><a id="trocarSenhaUsuario" class="dropdown-item" href="../login/redefinirSenha.html">Trocar Senha</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><span class="dropdown-item disabled" id="idUsuarioNav"></span></li>
                     </ul>
